--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CRUD Application</title>
+    <title>Rental Managment Application</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -51,7 +51,7 @@
     </style>
   </head>
   <body>
-    <h1>CRUD Application</h1>
+    <h1>Rental Managment Application</h1>
 
     <!-- Customer Section -->
     <div class="crud-section">
